# hi

./: .gitignore  .pre-commit-config.yaml  .yamllint.yml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
runs/20251027_020517/: events.out.tfevents.1761510917.Joys-MacBook-Air.local.12258.0
runs/20251027_020542/: events.out.tfevents.1761510942.Joys-MacBook-Air.local.14339.0
runs/20251027_020901/: events.out.tfevents.1761511141.Joys-MacBook-Air.local.29496.0
runs/20251027_021116/: events.out.tfevents.1761511276.Joys-MacBook-Air.local.46824.0
runs/20251027_021323/: events.out.tfevents.1761511403.Joys-MacBook-Air.local.55485.0
runs/20251027_021324/: events.out.tfevents.1761511404.Joys-MacBook-Air.local.56038.0
runs/20251027_021350/: events.out.tfevents.1761511430.Joys-MacBook-Air.local.57616.0
runs/20251027_021405/: events.out.tfevents.1761511445.Joys-MacBook-Air.local.57774.0
runs/20251027_021411/: events.out.tfevents.1761511451.Joys-MacBook-Air.local.57936.0
runs/20251027_021431/: events.out.tfevents.1761511471.Joys-MacBook-Air.local.59083.0
runs/20251027_021432/: events.out.tfevents.1761511472.Joys-MacBook-Air.local.59227.0
runs/20251027_021453/: events.out.tfevents.1761511493.Joys-MacBook-Air.local.59648.0
runs/20251027_021502/: events.out.tfevents.1761511502.Joys-MacBook-Air.local.59695.0
scripts/: commit-msg  rewrite_msg.sh  run_model.sh
src/: __init__.py  model.py
tests/: test_model.py
